--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="style.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" type="text/css"
           href="bower_components/ng-sortable/dist/ng-sortable.min.css" />
